[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ophyd-mmcore"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "acquire-zarr>=0.7.0",
    "ophyd-async>=0.17a2",
    "pymmcore-plus>=0.17.3",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ophyd_mmcore"]

[tool.hatch.build.targets.sdist]
include = [
  "src/ophyd_mmcore/**",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.pyright]
include = ["src/ophyd_mmcore"]
exclude = ["tests/**", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.ruff]
fix = true
exclude = ["tests"]

[tool.ruff.lint]
extend-select = [
    "D", # enable docstring checks
    "I", # enable imports checks
    "TC", # enable type check imports
    "FA102", # force __future__ imports
]
ignore = ["D100","D104"] # https://docs.astral.sh/ruff/rules/undocumented-public-package/

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
